kubernetes/namespaces/base/home-system/plex/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: plex
  namespace: home-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'false'
spec:
  hosts:
    - 'plex.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 32400
            host: plex.home-system.svc.cluster.local
          weight: 100
